fix: navbar z-index

--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -82,6 +82,9 @@ ul {
     padding: 0;
     height: 90px; /* Set a fixed height for the navbar */
     width: 100%; /* Full width of the screen */
+    position: fixed; /* Make the navbar fixed at the top */
+    top: 0; /* Align it to the top of the page */
+    z-index: 9999; /* Ensure it's above all other elements */
 }
 
 .navbar-collapse {
